# gotospec.nvim

./: .gitignore  Cargo.toml  Makefile  README.md
lua/: init.lua
lua/goto/: init.lua
lua/gotospec/: init.lua
src/: config.rs  filter.rs  finder.rs  lib.rs
