[package]
name = "goto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1"
mlua = { version = "0.8", features = ["luajit", "vendored", "module", "macros", "send", "async"] }
